# python-app-cookiecutter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO  cookiecutter.json  mkdocs.yml  pyproject.toml
.github/workflows/: cicd.yml
cli_command/: command.py
docs/: dev_commands.md
tests/: test_cli_command.py  test_{{cookiecutter.package_name}}.py
{{cookiecutter.package_name}}/: .coveragerc  .gitignore  Makefile  README.md  command.py  mkdocs.yml  pyproject.toml
{{cookiecutter.package_name}}/docs/: dev_commands.md  reference.md
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_name}}.py  {{cookiecutter.package_name}}_test.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: cli.py  command.py  main.py
