[tool.poetry]
name = "cli-command"
version = "0.1.1"
description = "Sample CLI Command"
authors = ["Damian Ziobro <damian@xmementoit.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.10.1"
black = "^22.3.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli-command = "cli_command.command:main"
